--- a/src/main/resources/templates/booking_success.html
+++ b/src/main/resources/templates/booking_success.html
@@ -837,6 +837,8 @@
 
 </div>
 
+<a href="https://flight-booking-app-battu-vamsi.up.railway.app/dashboard" class="home-link">Click here to go to the home page</a>
+
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
 
