--- a/src/main/resources/templates/customer-dashboard.html
+++ b/src/main/resources/templates/customer-dashboard.html
@@ -1141,7 +1141,7 @@ button:hover,
         
         
         
-        <a href="#" onclick="logout()">Logout</a>
+        <a href="https://flight-booking-app-battu-vamsi.up.railway.app/login" onclick="logout()">Logout</a>
     </div>
     
     <div class="notification-panel" id="notificationPanel">
