--- a/src/main/resources/templates/customer-dashboard.html
+++ b/src/main/resources/templates/customer-dashboard.html
@@ -1074,7 +1074,7 @@ button:hover,
 }
 
 .close {
-    color: #aaa;
+    color: #f00;
     float: right;
     font-size: 28px;
     font-weight: bold;
